--- a/Mod2_Sol/index.html
+++ b/Mod2_Sol/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Responsive Layout</title>
+<title>W2 Assignment</title>
 <link rel="stylesheet" href="CSS/Style.css">
 
 </head>
